--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">	
 	<title>Volnirr&#39;s Webpage</title>
+	<meta charset="utf-8">	
+	<h1>Volnirr&#39;s Webpage</title>
 	<p> Here lies a conglomeration of great stuff, or to some people, junk.</p>
 	<br><hr><br>
 	<ul>
