--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 	<p> Here lies a conglomeration of great stuff, or to some people, junk.</p>
 	<br><hr><br>
 	<ul>
-		<li>Blogs</li>
 		<li>Library</li>
 		<li>Resources</li>
+		<hr>
+		<p>Coming soon (probably not)</p>
+		<li>Blogs</li>
 		<li>Search</li>
-		<li>Message Me</li>		
+		<li>Message Me</li>	
 	</ul>
 </head>
 </html>
