--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<p> Here lies a conglomeration of great stuff, or to some people, junk.</p>
 	<br><hr><br>
 	<ul>
-		<li>Library</li>
+		<li><a href="/library">Library</a></li>
 		<li>Resources</li>
 		<hr>
 		<p>Coming soon (probably not)</p>
