--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Volnirr&#39;s Webpage</title>
 	<meta charset="utf-8">	
-	<h1>Volnirr&#39;s Webpage</title>
+	<h1>Volnirr&#39;s Webpage</hi>
 	<p> Here lies a conglomeration of great stuff, or to some people, junk.</p>
 	<br><hr><br>
 	<ul>
