--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
 	<title>Volnirr&#39;s Webpage</title>
+	<link rel='stylesheet' href='style.css'>
 	<meta charset="utf-8">	
+</head>
+<body>
+<main>
 	<h1>Volnirr&#39;s Webpage</hi>
 	<p> Here lies a conglomeration of great stuff, or to some people, junk.</p>
 	<br><hr><br>
@@ -15,5 +19,6 @@
 		<li>Search</li>
 		<li>Message Me</li>	
 	</ul>
-</head>
+</main>
+</body>
 </html>
