--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <main>
-	<h1>Volnirr&#39;s Webpage</hi>
+	<h1>Volnirr&#39;s Webpage</h1>
 	<p> Here lies a conglomeration of great stuff, or to some people, junk.</p>
 	<br><hr><br>
 	<ul>
