--- a/library.html
+++ b/library.html
@@ -1,6 +1,6 @@
 <!DOCTYLE html>
 <html lang="en">
 <title>Volnirr&#39;s Library</title>
-  <p><a href="index">back
+  <p><a href="index"><- back</a>
   <h1>Volnirr&#39;s Library</h1>
 </html>
