--- a/library.html
+++ b/library.html
@@ -1,6 +1,12 @@
 <!DOCTYLE html>
 <html lang="en">
-<title>Volnirr&#39;s Library</title>
-  <p><a href="index"><- back</a>
+<head>
+    title>Volnirr&#39;s Library</title>
+</head>
+<body>
+<main>
+  <p><a href="index"><- back</a></p>
   <h1>Volnirr&#39;s Library</h1>
+</main>
+</body>
 </html>
