--- a/library.html
+++ b/library.html
@@ -1,12 +1,15 @@
 <!DOCTYLE html>
 <html lang="en">
 <head>
-    title>Volnirr&#39;s Library</title>
+    <title>Volnirr&#39;s Library</title>
+    <link rel='stylesheet' href='style.css'>
 </head>
 <body>
 <main>
   <p><a href="index"><- back</a></p>
-  <h1>Volnirr&#39;s Library</h1>
+    <header>
+        <h1>Volnirr&#39;s Library</h1>
+    </header>
 </main>
 </body>
 </html>
