--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 <main>
 	<h1>Volnirr&#39;s Webpage</h1>
-	<p> Here lies a conglomeration of great stuff, or to some people, junk.</p>
+	<p> Here lies a conglomeration of great stuff&comma; or to some people&comma; junk.</p>
 	<br><hr><br>
 	<ul>
 		<li><a href="/library">Library</a></li>
-		<li>Resources</li>
+		<li><a href="/resources">Resources</a></li>
 		<hr>
 		<p>Coming soon (probably not)</p>
 		<li>Blogs</li>
@@ -20,5 +20,9 @@
 		<li>Message Me</li>	
 	</ul>
 </main>
+<footer>
+	<a href="http://volnirr.github.io">http://volnirr.github.io</a>
+	<p>bye!</p>
+</footer>
 </body>
 </html>
