--- a/library.html
+++ b/library.html
@@ -1,15 +1,20 @@
-<!DOCTYLE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Volnirr&#39;s Library</title>
     <link rel='stylesheet' href='style.css'>
+    <meta charset='utf-8'>
 </head>
 <body>
 <main>
-  <p><a href="index"><- back</a></p>
+  <p><a href="index">&lt;- back</a></p>
     <header>
         <h1>Volnirr&#39;s Library</h1>
     </header>
 </main>
+<footer>
+	<a href="https://volnirr.github.com">https://volnirr.github.com</a>
+	<p>bye!</p>
+</footer>
 </body>
 </html>
