--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<p> Here lies a conglomeration of great stuff&comma; or to some people&comma; junk.</p>
 	<br><hr><br>
 	<ul>
-		<li><a href="/library">Library</a></li>
-		<li><a href="/resources">Resources</a></li>
+		<li><a href="https://volnirr.github.io/blogs">Blogs</a></li>
+		<li><a href="https://volnirr.github.io/library">Library</a></li>
+		<li><a href="https://volnirr.github.io/resources">Resources</a></li>
 		<hr>
-		<p>Coming soon (probably not)</p>
-		<li>Blogs</li>
+		<p>Coming soon (probably not)</p>		
 		<li>Search</li>
 		<li>Message Me</li>	
 	</ul>
