--- a/blogs.html
+++ b/blogs.html
@@ -11,11 +11,11 @@
   <a href="/"><header><h1>Blogs</h1></header></a>
   <hr>
   <ul>
-    <li><time>2025 Feb 5</time> &verbar; <a href="https://volnirr.github.com/articles/money-chasing">Money Chasing</a></li>  
+    <li><time>2025 Feb 5</time> &verbar; <a href="https://volnirr.github.io/articles/money-chasing">Money Chasing</a></li>  
   </ul>
 </main>
 <footer>
-  <a href="https://volnirr.github.com">https://volnirr.github.com</a>
+  <a href="https://volnirr.github.io">https://volnirr.github.com</a>
   <p>bye!</p>
 </footer>
 </body>
