--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,7 @@
   <a href="/"><header><h1>Blogs</h1></header></a>
   <hr>
   <ul>
-    <li><time>2025 Feb 5</time> &verbar; <a href="https://volnirr.github.io/articles/money-chasing">Money Chasing</a></li>  
+    <li><time>2025 Feb 5</time> &verbar; <a href="https://volnirr.github.io/articles/chasing-money">Chasing Money</a></li>  
   </ul>
 </main>
 <footer>
