--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 <main>
+	<header>	
 	<h1>Volnirr&#39;s Webpage</h1>
 	<p> Here lies a conglomeration of great stuff&comma; or to some people&comma; junk.</p>
+	</header>
 	<br><hr><br>
 	<ul>
 		<li><a href="https://volnirr.github.io/blogs">Blogs</a></li>
