--- a/library.html
+++ b/library.html
@@ -7,12 +7,11 @@
 </head>
 <body>
 <main>
-  <p><a href="index">&lt;- back</a></p>
-    <header>
-        <h1>Volnirr&#39;s Library</h1>
-    </header>
+	<header><a href='https://volnirr.github.io'><h1>Volnirr&#39;s Library</h1></a></header>
+	<hr>
 </main>
 <footer>
+	<hr>
 	<a href="https://volnirr.github.com">https://volnirr.github.com</a>
 	<p>bye!</p>
 </footer>
