--- a/resources.html
+++ b/resources.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 <main>
-	<p><a href="/">&lt;- back</a></p>
-	<h1>Volnirr&#39;s Resources</h1>
+	<header><a href='https://volnirr.github.io'><h1>Volnirr&#39;s Resources</h1></a></header>
+	<hr>
 </main>
 <footer>
+	<hr>
 	<a href="https://volnirr.github.io">https://volnirr.github.com</a>
 	<p>bye!</p>
 </footer>
