--- a/blogs.html
+++ b/blogs.html
@@ -4,11 +4,10 @@
   <title>Blogs</title>
   <meta charset="utf-8">
   <link rel='stylesheet' href='style.css'>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <main>
-  <a href="/"><header><h1>Blogs</h1></header></a>
+  <a class="no-ul" href="https://volnirr.github.io"><header><h1>Blogs</h1></header></a>
   <hr>
   <ul>
     <li><time>2025 Feb 5</time> &verbar; <a href="https://volnirr.github.io/articles/chasing-money">Chasing Money</a></li>  
