--- a/library.html
+++ b/library.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <main>
-	<header><a href='https://volnirr.github.io'><h1>Volnirr&#39;s Library</h1></a></header>
+	<header><a class="no-ul" href='https://volnirr.github.io'><h1>Volnirr&#39;s Library</h1></a></header>
 	<hr>
 </main>
 <footer>
