--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,7 @@
   <a class="no-ul" href="https://volnirr.github.io"><header><h1>Blogs</h1></header></a>
   <hr>
   <ul>
-    <li><time>time</time> &verbar; <a>temp</a></li>  
+    <li><time>2025 Feb 5</time> &verbar; <a href="https://volnirr.github.io/articles/chasing-money">Chasing Money</a></li>  
   </ul>
 </main>
 <footer>
