--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	</header>
 	<br><hr><br>
 	<ul>
+		<li><a href="https://twitch.tv/kavcsa">Twitch</a></li>
+		<li><a href="https://youtube.com">Youtube</a></li>
 		<li><a href="https://volnirr.github.io/blogs">Blogs</a></li>
 		<li><a href="https://volnirr.github.io/library">Library</a></li>
 		<li><a href="https://volnirr.github.io/resources">Resources</a></li>
