--- a/library.html
+++ b/library.html
@@ -9,6 +9,14 @@
 <main>
 	<header><a class="no-ul" href='https://volnirr.github.io'><h1>Volnirr&#39;s Library</h1></a></header>
 	<hr>
+	<h3>GEMS</h3>
+	<ul>
+		<li>Harassment Architecture - Mike Ma</li>
+		<li>Thinking Fast, and Slow - Daniel Kahneman</li>
+		<li>How to Win Friends and Influence People - Dale Carnegie</li>
+		<li>The Dying Earth - Jack Vance</li>
+		<li>Do Androids Dream of Electric Sheep - Philip K Dick</li>
+		<li>Notes from Underground - Fyodor Dostoevsky</li>
 </main>
 <footer>
 	<hr>
