--- a/blogs.html
+++ b/blogs.html
@@ -15,7 +15,7 @@
 </main>
 <footer>
   <hr>
-  <a href="https://volnirr.github.io">https://volnirr.github.com</a>
+  <a href="https://volnirr.github.io">https://volnirr.github.io</a>
   <p>bye!</p>
 </footer>
 </body>
