--- a/library.html
+++ b/library.html
@@ -20,7 +20,7 @@
 </main>
 <footer>
 	<hr>
-	<a href="https://volnirr.github.com">https://volnirr.github.com</a>
+	<a href="https://volnirr.github.com">https://volnirr.github.io</a>
 	<p>bye!</p>
 </footer>
 </body>
