--- a/resources.html
+++ b/resources.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Resources</title>
-	<link rel='stylesheet' href='style.css'>
-	<meta charset='utf-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Useful Links</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<main>
-	<header><a class="no-ul" href='https://volnirr.github.io'><h1>Volnirr&#39;s Resources</h1></a></header>
-	<hr>
-</main>
-<footer>
-	<hr>
-	<a href="https://volnirr.github.io">https://volnirr.github.com</a>
-	<p>bye!</p>
-</footer>
+    <header>
+        <nav>
+            <h1>Your Name</h1>
+            <div>
+                <a href="index.html">Home</a>
+                <a href="library.html">Library</a>
+                <a href="blog.html">Blog</a>
+                <a href="links.html">Useful Links</a>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section id="links">
+            <h2>Useful Links</h2>
+            <ul class="link-list">
+                <li><a href="#" target="_blank">Link 1 Description</a></li>
+                <li><a href="#" target="_blank">Link 2 Description</a></li>
+                <li><a href="#" target="_blank">Link 3 Description</a></li>
+                <li><a href="#" target="_blank">Link 4 Description</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
