--- a/blogs.html
+++ b/blogs.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Blogs</title>
-  <meta charset="utf-8">
-  <link rel='stylesheet' href='style.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Blog</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<main>
-  <a class="no-ul" href="https://volnirr.github.io"><header><h1>Blogs</h1></header></a>
-  <hr>
-  <ul>
-    <li><time>2025 Feb 5</time> &verbar; <a href="https://volnirr.github.io/articles/chasing-money">Chasing Money</a></li>  
-  </ul>
-</main>
-<footer>
-  <hr>
-  <a href="https://volnirr.github.io">https://volnirr.github.io</a>
-  <p>bye!</p>
-</footer>
+    <header>
+        <nav>
+            <h1>Your Name</h1>
+            <div>
+                <a href="index.html">Home</a>
+                <a href="library.html">Library</a>
+                <a href="blog.html">Blog</a>
+                <a href="links.html">Useful Links</a>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section id="blog">
+            <h2>Blog</h2>
+            <article>
+                <h3>Blog Post Title 1</h3>
+                <p class="date">Date: XX/XX/XXXX</p>
+                <p>Your blog post content goes here. Write about your thoughts, experiences, or insights.</p>
+            </article>
+            <article>
+                <h3>Blog Post Title 2</h3>
+                <p class="date">Date: XX/XX/XXXX</p>
+                <p>Another blog post content. Discuss something interesting or share a personal story.</p>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
