--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Volnirr&#39;s Webpage</title>
-	<link rel='stylesheet' href='style.css'>
-	<meta charset="utf-8">	
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<main>
-	<header>	
-	<h1>Volnirr&#39;s Webpage</h1>
-	<p> Here lies a conglomeration of great stuff&comma; or to some people&comma; junk.</p>
-	</header>
-	<br><hr><br>
-	<ul>
-		<li><a href="https://twitch.tv/kavcsa">Twitch</a></li>
-		<li><a href="https://youtube.com">Youtube</a></li>
-		<li><a href="https://volnirr.github.io/blogs">Blogs</a></li>
-		<li><a href="https://volnirr.github.io/library">Library</a></li>
-		<li><a href="https://volnirr.github.io/resources">Resources</a></li>
-	</ul>
-	<hr>
-	<p>Coming soon (probably not)</p>	
-	<ul>
-		<li>Search</li>
-		<li>Message Me</li>	
-	</ul>
-</main>
-<footer>
-	<hr>
-	<a href="http://volnirr.github.io">http://volnirr.github.io</a>
-	<p>bye!</p>
-</footer>
+    <header>
+        <nav>
+            <h1>Your Name</h1>
+            <div>
+                <a href="index.html">Home</a>
+                <a href="library.html">Library</a>
+                <a href="blog.html">Blog</a>
+                <a href="links.html">Useful Links</a>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <h2>About Me</h2>
+            <p>Write a brief introduction about yourself here. Talk about your interests, background, professional experiences, and what makes you unique.</p>
+            <p>You might want to include:</p>
+            <ul>
+                <li>Your professional background</li>
+                <li>Key skills and interests</li>
+                <li>Personal philosophies or motivations</li>
+                <li>Hobbies or passions</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
