--- a/library.html
+++ b/library.html
@@ -1,27 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Volnirr&#39;s Library</title>
-    <link rel='stylesheet' href='style.css'>
-    <meta charset='utf-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Book Library</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<main>
-	<header><a class="no-ul" href='https://volnirr.github.io'><h1>Volnirr&#39;s Library</h1></a></header>
-	<hr>
-	<h3>GEMS</h3>
-	<ul>
-		<li>Harassment Architecture - Mike Ma</li>
-		<li>Thinking Fast, and Slow - Daniel Kahneman</li>
-		<li>How to Win Friends and Influence People - Dale Carnegie</li>
-		<li>The Dying Earth - Jack Vance</li>
-		<li>Do Androids Dream of Electric Sheep - Philip K Dick</li>
-		<li>Notes from Underground - Fyodor Dostoevsky</li>
-</main>
-<footer>
-	<hr>
-	<a href="https://volnirr.github.com">https://volnirr.github.io</a>
-	<p>bye!</p>
-</footer>
+    <header>
+        <nav>
+            <h1>Your Name</h1>
+            <div>
+                <a href="index.html">Home</a>
+                <a href="library.html">Library</a>
+                <a href="blog.html">Blog</a>
+                <a href="links.html">Useful Links</a>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section id="library">
+            <h2>My Book Recommendations</h2>
+            <div class="book-grid">
+                <div class="book-card">
+                    <h3>Book Title 1</h3>
+                    <p>Author Name</p>
+                    <p>Brief description of why you recommend this book.</p>
+                </div>
+                <div class="book-card">
+                    <h3>Book Title 2</h3>
+                    <p>Author Name</p>
+                    <p>Brief description of why you recommend this book.</p>
+                </div>
+                <div class="book-card">
+                    <h3>Book Title 3</h3>
+                    <p>Author Name</p>
+                    <p>Brief description of why you recommend this book.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
