--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Home</title>
+    <title>Volnir - Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>Your Name</h1>
+            <h1>Volnir's Page</h1>
             <div>
                 <a href="index.html">Home</a>
                 <a href="library.html">Library</a>
@@ -22,19 +22,8 @@
     <main>
         <section id="home">
             <h2>About Me</h2>
-            <p>Write a brief introduction about yourself here. Talk about your interests, background, professional experiences, and what makes you unique.</p>
-            <p>You might want to include:</p>
-            <ul>
-                <li>Your professional background</li>
-                <li>Key skills and interests</li>
-                <li>Personal philosophies or motivations</li>
-                <li>Hobbies or passions</li>
-            </ul>
+            <p>I like to play video games and program computers.</p>
         </section>
     </main>
-
-    <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
 </body>
 </html>
