--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div>
                 <a href="index.html">Home</a>
                 <a href="library.html">Library</a>
-                <a href="blog.html">Blog</a>
-                <a href="links.html">Useful Links</a>
+                <a href="blogs.html">Blog</a>
+                <a href="resources.html">Resources</a>
             </div>
         </nav>
     </header>
