--- a/blogs.html
+++ b/blogs.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Blog</title>
+    <title>Volnir - Blog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>Your Name</h1>
+            <h1>Volnir's Page</h1>
             <div>
                 <a href="index.html">Home</a>
                 <a href="library.html">Library</a>
-                <a href="blog.html">Blog</a>
-                <a href="links.html">Useful Links</a>
+                <a href="blogs.html">Blog</a>
+                <a href="resources.html">Useful Links</a>
             </div>
         </nav>
     </header>
@@ -25,12 +25,7 @@
             <article>
                 <h3>Blog Post Title 1</h3>
                 <p class="date">Date: XX/XX/XXXX</p>
-                <p>Your blog post content goes here. Write about your thoughts, experiences, or insights.</p>
-            </article>
-            <article>
-                <h3>Blog Post Title 2</h3>
-                <p class="date">Date: XX/XX/XXXX</p>
-                <p>Another blog post content. Discuss something interesting or share a personal story.</p>
+                <p>lorem ipsum</p>
             </article>
         </section>
     </main>
